changed the data binded to forms to a id instead of the whole object
