# app/Swagger/request/games/StoreGameRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace Swagger\Request\Games;
+/**
+ * Created by PhpStorm.
+ * User: pixco
+ * Date: 18/02/2017
+ * Time: 09:29 PM
+ */
+
+/**
+ * @SWG\Definition(definition="StoreGameRequest")
+ */
+class StoreGameRequest
+{
+    /**
+     * @var string
+     * @SWG\Property( example = "2017-02-18 21:30:19")
+     */
+    private $played_at;
+
+    /**
+     * @var array
+     * @SWG\Property(
+     *     @SWG\Items(ref="#/definitions/MoveItem")
+     * )
+     */
+    private $moves;
+}
