# app/Swagger/response/data/MoveItem.php
@@ -1,0 +1,39 @@
+<?php
+/**
+ * Created by PhpStorm.
+ * User: pixco
+ * Date: 18/02/2017
+ * Time: 09:32 PM
+ */
+
+namespace Swagger\Response\Data;
+
+/**
+ * @SWG\Definition(definition="MoveItem")
+ */
+class MoveItem
+{
+    /**
+     * @var integer
+     * @SWG\Property( example = 122)
+     */
+    private $duration;
+
+    /**
+     * @var integer
+     * @SWG\Property( example = 1)
+     */
+    private $student;
+
+    /**
+     * @var object
+     * @SWG\Property(ref="#/definitions/OperationCardItem")
+     */
+    private $card_on_deck;
+
+    /**
+     * @var object
+     * @SWG\Property(ref="#/definitions/PowerCardItem")
+     */
+    private $card_played;
+}
